--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+3-25 [非法石油是如何在中国的帮助下走私到朝鲜的？](/articles/nyt/1047043.md)
+
 3-25 [H&M因拒用新疆棉花在华遭抵制](/articles/nyt/1047044.md)
 
 3-25 [香港暂停接种复必泰新冠疫苗，发现包装瑕疵](/articles/nyt/1047045.md)
@@ -598,6 +600,4 @@
 1-7 [国会大厦暴乱：特朗普时代的暴力结尾](/articles/nyt/1047341.md)
 
 1-7 [中欧投资协定会影响美欧关系吗？](/articles/nyt/1047342.md)
-
-1-7 [香港大抓捕展示中共权力与铁腕](/articles/nyt/1047343.md)
 
