--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+3-25 [中国官媒掀抵制H&M浪潮 一场精心策划的完美风暴？](/articles/rfa/1046055.md)
+
 3-25 [美国会审查《全球马格尼茨基人权问责法》实施情况](/articles/rfa/1046056.md)
 
 3-25 [《自然》曝光造假论文“产业化”  大部分来自中国](/articles/rfa/1046057.md)
@@ -598,6 +600,4 @@
 2-20 [疫情溯源   世卫锁定两种动物     美国排除冷链说](/articles/rfa/1046353.md)
 
 2-20 [法国外长：援助多国但不同于中国的非洲模式](/articles/rfa/1046354.md)
-
-2-20 [加拿大议会讨论新疆种族灭绝议案  下周有望通过](/articles/rfa/1046355.md)
 
