--- a/lists/路透.md
+++ b/lists/路透.md
@@ -1,6 +1,14 @@
 路透
 ------
 
+3-25 [中国股市沪深300指数收在逾三个月低位 因政策收紧担忧和新疆问题](/articles/reuters/1040106.md)
+
+3-25 [对于一些公司拒用新疆棉花 中国外交部称不用新疆棉花是相关企业的损失](/articles/reuters/1040107.md)
+
+3-25 [中国商务部称纯白新疆棉花不容抹黑 望有关企业纠正错误避免商业问题政治化](/articles/reuters/1040108.md)
+
+3-25 [独家：港府要求外国政府停止接受英国国民海外护照](/articles/reuters/1040109.md)
+
 3-25 [综述：中国加快推进RCEP从签署到落地进程 力争明年1月1日生效](/articles/reuters/1040110.md)
 
 3-25 [多艘拖船趁水涨船高协助长赐号脱困 航运拥堵压力续增](/articles/reuters/1040111.md)
@@ -592,12 +600,4 @@
 3-18 [焦点：美联储鲍威尔称美国经济强劲 有望帮助欧洲等表现落后地区](/articles/reuters/1040404.md)
 
 3-18 [百度香港招股价定为每股252港元 较美国ADR周三收盘价折让约6.3%](/articles/reuters/1040405.md)
-
-3-18 [焦点：德国政府顾问预计首季经济萎缩约2% 全年成长预估大幅下调至3.1%](/articles/reuters/1040406.md)
-
-3-18 [G7仍在讨论增加IMF储备以应对疫情的提议 未达成协议--消息人士](/articles/reuters/1040407.md)
-
-3-18 [美国国务卿布林肯批评中国行为咄咄逼人 抨击朝鲜系统性地滥权](/articles/reuters/1040408.md)
-
-3-18 [阿斯利康新冠疫苗的好处大于风险 建议继续接种--WHO](/articles/reuters/1040409.md)
 
