--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 3-25 [歪脑 | 谁拉黑了中国棉花？披着狼皮的新疆棉](/articles/cdt/384590.md)
 
+3-25 [【网络民议】别支持新疆棉花了，请支持新疆人](/articles/cdt/384591.md)
+
 3-25 [【旧闻重温】杜绍斐 DUSHAOFEI | 血色棉花：用生命堆砌的6万亿白色帝国](/articles/cdt/384600.md)
 
 3-25 [玖奌杂货铺 | 方方兑现承诺，捐出日记全部稿酬](/articles/cdt/384604.md)
@@ -598,6 +600,4 @@
 2-11 [【404文库】枪稿Lite | 为什么Clubhouse必死无疑?](/articles/cdt/386025.md)
 
 2-11 [德国之声 | 美方不接受世卫调查结果 遭北京与世卫专家回怼](/articles/cdt/386026.md)
-
-2-10 [中央通讯社｜Clubhouse被封中国官媒称片面反华非言论自由](/articles/cdt/386030.md)
 
