--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,18 @@
 法广
 ------
 
+3-25 [建制派鼻祖曾钰成竟被林郑嫌弃橡皮图像盖得太慢](/articles/rfi/1032805.md)
+
+3-25 [新冠疫苗香港出现9宗“贝尔面瘫”个案](/articles/rfi/1032806.md)
+
+3-25 [有香港私人医生免费为大陆人打疫苗针](/articles/rfi/1032807.md)
+
+3-25 [新疆棉花案 外国品牌或遭拉黑 中资服品飙升](/articles/rfi/1032808.md)
+
+3-25 [陈破空：阿拉斯加会谈：美中关系难以解冻，中国刮起民族主义热潮 - 公民论坛](/articles/rfi/1032809.md)
+
+3-25 [巴黎庭审5学生推特疫情“仇亚”案](/articles/rfi/1032810.md)
+
 3-25 [欧盟对俄罗斯与中国疫苗开门？](/articles/rfi/1032811.md)
 
 3-25 [新疆棉花制裁与抵制角力加大 中国多推不吃这一套](/articles/rfi/1032812.md)
@@ -588,16 +600,4 @@
 3-19 [观点周刊：看中国如何趁机获取法国科研成果 - 法国报纸摘要](/articles/rfi/1033103.md)
 
 3-19 [中国长期经营合作无间法国高层管理者 谋置入孔子学院 - 中华世界](/articles/rfi/1033104.md)
-
-3-19 [菲律宾单日确诊创新高 – 法国国际广播电台 - RFI](/articles/rfi/1033105.md)
-
-3-19 [法智库专家：中美首轮舌战不是对话 是喊给本国人听的 - 要闻解说](/articles/rfi/1033106.md)
-
-3-19 [亚股跌多涨少 – 法国国际广播电台 - RFI](/articles/rfi/1033107.md)
-
-3-19 [台湾主动提出恢复两岸交流措施盼大陆相对回应](/articles/rfi/1033108.md)
-
-3-19 [全球青年保护气候大游行 要行动不要空的承诺](/articles/rfi/1033109.md)
-
-3-19 [日本官房长官反驳中国“日本充当美国附庸”之说](/articles/rfi/1033110.md)
 
