--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+3-25 [官媒鼓动抵制国际时装品牌   仇外“爱国主义”成主旋律](/articles/rfa/1046054.md)
+
 3-25 [中国官媒掀抵制H&M浪潮 一场精心策划的完美风暴？](/articles/rfa/1046055.md)
 
 3-25 [美国会审查《全球马格尼茨基人权问责法》实施情况](/articles/rfa/1046056.md)
@@ -598,6 +600,4 @@
 2-20 [三百余人联署促尽快出台《政府法》 向官员问责](/articles/rfa/1046352.md)
 
 2-20 [疫情溯源   世卫锁定两种动物     美国排除冷链说](/articles/rfa/1046353.md)
-
-2-20 [法国外长：援助多国但不同于中国的非洲模式](/articles/rfa/1046354.md)
 
