--- a/lists/金融时报.md
+++ b/lists/金融时报.md
@@ -1,6 +1,8 @@
 金融时报
 ------
 
+3-25 [英国工会呼吁限制职场使用人工智能](/articles/ft/1045847.md)
+
 3-25 [中国科技股因监管担忧大幅下跌](/articles/ft/1045848.md)
 
 3-25 [中国股市由领跑者变为落后者](/articles/ft/1045849.md)
@@ -598,6 +600,4 @@
 2-2 [海航集团子公司披露资金滥用后股价大跌](/articles/ft/1046145.md)
 
 2-2 [Reddit“股民起义”会撼动华尔街吗？](/articles/ft/1046146.md)
-
-2-2 [正在改变的秩序：GME逼空折射美国社会风险](/articles/ft/1046147.md)
 
