--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+3-25 [东京奥运开启圣火传递](/articles/dw/1043329.md)
+
 3-25 [新疆棉花：中国网民的抵制“盛宴”](/articles/dw/1043330.md)
 
 3-25 [日首相证实：朝鲜发射两枚弹道导弹](/articles/dw/1043331.md)
@@ -598,6 +600,4 @@
 3-2 [德语媒体：每况愈下的中国新闻环境](/articles/dw/1043627.md)
 
 3-2 [白宫：将让缅甸暴力和政变责任方付出更大代价](/articles/dw/1043628.md)
-
-3-2 [新冠大流行终结有望？](/articles/dw/1043629.md)
 
