--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,14 @@
 德国之声
 ------
 
+3-25 [默克尔公开检讨：这都是我的错](/articles/dw/1043325.md)
+
+3-25 [巨型货轮堵塞苏伊士运河 恐引发多米诺骨牌效应](/articles/dw/1043326.md)
+
+3-25 [一艘貨船如何危及全球航運？](/articles/dw/1043327.md)
+
+3-25 [贝多芬第九交响曲第一乐章](/articles/dw/1043328.md)
+
 3-25 [东京奥运开启圣火传递](/articles/dw/1043329.md)
 
 3-25 [新疆棉花：中国网民的抵制“盛宴”](/articles/dw/1043330.md)
@@ -592,12 +600,4 @@
 3-3 [解放军南海军演撞期台湾射击演训](/articles/dw/1043623.md)
 
 3-3 [评论：在法国，没人可凌驾于法律之上](/articles/dw/1043624.md)
-
-3-2 [孟晚舟引渡审理进入最后阶段](/articles/dw/1043625.md)
-
-3-2 [长期缺水可能成为台湾晶圆厂扩厂限制](/articles/dw/1043626.md)
-
-3-2 [德语媒体：每况愈下的中国新闻环境](/articles/dw/1043627.md)
-
-3-2 [白宫：将让缅甸暴力和政变责任方付出更大代价](/articles/dw/1043628.md)
 
