--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,6 +1,8 @@
 中国数字时代
 ------
 
+3-25 [【404聊天室】《无依之地》在中国死而复生？电影审查有哪些敏感词？来聊聊中国电影审查的台前幕后，并可提前发问](/articles/cdt/384578.md)
+
 3-25 [三言财经｜耐克直播间小姐姐被骂哭：我得上班  安踏主播卖力嗓子喊哑](/articles/cdt/384579.md)
 
 3-25 [歪脑 | 谁拉黑了中国棉花？披着狼皮的新疆棉](/articles/cdt/384590.md)
@@ -598,6 +600,4 @@
 2-11 [ABC中文 | 中国屏蔽Clubhouse的前日，我听到汉族人向维族人道歉](/articles/cdt/386011.md)
 
 2-11 [美国之音 | 从缺席审判到没收“涉案”财产  中共加大对境外异议人士的威慑](/articles/cdt/386013.md)
-
-2-11 [【404文库】枪稿Lite | 为什么Clubhouse必死无疑?](/articles/cdt/386025.md)
 
