--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+3-25 [蔡英文要打造半导体“护国群山” 但面临内忧外患](/articles/rfa/1046051.md)
+
 3-25 [因应解放军威胁  台湾将远程打击纳入建军重点](/articles/rfa/1046052.md)
 
 3-25 [中国难忘“八国联军”百年耻辱 分析：无法成为真正强国](/articles/rfa/1046053.md)
@@ -598,6 +600,4 @@
 2-20 [中国前首富黄光裕获释后大表“爱党爱国”](/articles/rfa/1046349.md)
 
 2-20 [“白酒院士”后又现“黄金院士”      院士成什么了？](/articles/rfa/1046350.md)
-
-2-20 [G7与慕尼黑安全会议  美欧重携手抗独裁](/articles/rfa/1046351.md)
 
