--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+3-25 [中国外长王毅出访土耳其 当地维吾尔人抗议中国打压](/articles/voa/1041984.md)
+
 3-25 [大量中国渔船出现在南中国海有争议岩礁 菲律宾总统表示担忧](/articles/voa/1041985.md)
 
 3-25 [多重利空形成重压 中国科技企业在美港股市遭重创](/articles/voa/1041986.md)
@@ -598,6 +600,4 @@
 3-17 [美中高层对话“无解”的难题：台湾](/articles/voa/1042282.md)
 
 3-17 [单向投资媒体与娱乐：批评人士对欧中投资协议发出警报](/articles/voa/1042283.md)
-
-3-17 [美墨边界移民激增 华盛顿辩论再起](/articles/voa/1042284.md)
 
