--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+3-25 [文革红剧《白毛女》等成中共党庆重头戏](/articles/rfa/1046050.md)
+
 3-25 [蔡英文要打造半导体“护国群山” 但面临内忧外患](/articles/rfa/1046051.md)
 
 3-25 [因应解放军威胁  台湾将远程打击纳入建军重点](/articles/rfa/1046052.md)
@@ -598,6 +600,4 @@
 2-20 [东北试点放开生育？学者：为时已晚](/articles/rfa/1046348.md)
 
 2-20 [中国前首富黄光裕获释后大表“爱党爱国”](/articles/rfa/1046349.md)
-
-2-20 [“白酒院士”后又现“黄金院士”      院士成什么了？](/articles/rfa/1046350.md)
 
