--- a/lists/金融时报.md
+++ b/lists/金融时报.md
@@ -1,6 +1,8 @@
 金融时报
 ------
 
+3-26 [新冠“三棱镜”：疫苗技术、疫苗经济与疫苗政治](/articles/ft/1045846.md)
+
 3-25 [英国工会呼吁限制职场使用人工智能](/articles/ft/1045847.md)
 
 3-25 [中国科技股因监管担忧大幅下跌](/articles/ft/1045848.md)
@@ -598,6 +600,4 @@
 2-2 [展望2021：货币政策应避免急转弯](/articles/ft/1046144.md)
 
 2-2 [海航集团子公司披露资金滥用后股价大跌](/articles/ft/1046145.md)
-
-2-2 [Reddit“股民起义”会撼动华尔街吗？](/articles/ft/1046146.md)
 
