--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+3-26 [脸书：中国黑客利用恶意软件监控海外维吾尔人](/articles/rfa/1046048.md)
+
 3-26 [“学术自由指数”中国排名垫底  香港低过俄罗斯](/articles/rfa/1046049.md)
 
 3-25 [文革红剧《白毛女》等成中共党庆重头戏](/articles/rfa/1046050.md)
@@ -598,6 +600,4 @@
 2-22 [北京高调纪念毛接班人华国锋     学者解读:否定邓小平路线](/articles/rfa/1046346.md)
 
 2-22 [北京为香港选举"盖棺定论"     阻"反中乱港者"进入体制](/articles/rfa/1046347.md)
-
-2-20 [东北试点放开生育？学者：为时已晚](/articles/rfa/1046348.md)
 
