--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+3-26 [美在台协会：推动美台半导体合作是美国政策要务](/articles/voa/1041972.md)
+
+3-26 [克鲁兹提“ROC法”禁美政府不当对待台湾官员](/articles/voa/1041973.md)
+
+3-26 [美国特种作战司令告诉议员：如无美国支持 阿富汗军队可能会崩溃](/articles/voa/1041974.md)
+
 3-26 [中国对台战略模糊，其实自己心中也模糊](/articles/voa/1041975.md)
 
 3-26 [香港各界回应紧急叫停复必泰疫苗 医护工会批防疫政治化](/articles/voa/1041976.md)
@@ -594,10 +600,4 @@
 3-17 [联合国：缅甸政变导致食品和燃料价格上涨](/articles/voa/1042270.md)
 
 3-17 [美国要求中国改善与澳大利亚关系 否则美中关系不会改善](/articles/voa/1042271.md)
-
-3-17 [时事大家谈: 北京终结香港民主，西方除了谴责还能做些什么？](/articles/voa/1042272.md)
-
-3-17 [中国因“涉疆谣言”起诉德国学者 是新策略还是作秀？](/articles/voa/1042273.md)
-
-3-17 [反垄断开铡 中国恐强力整顿网络巨头阿里巴巴](/articles/voa/1042274.md)
 
