--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,12 @@
 自由亚洲电台
 ------
 
+3-26 [拜登强调为中国人权发声    学者：应团结因应北京的抵制](/articles/rfa/1046044.md)
+
+3-26 [美国推出新规   中企在美上市将困难重重](/articles/rfa/1046045.md)
+
+3-26 [欧洲议员: 中国用民族主义经济施压  反言论自由](/articles/rfa/1046046.md)
+
 3-26 [广东东莞“专项整治”电动、摩托车  引发民众不满](/articles/rfa/1046047.md)
 
 3-26 [脸书：中国黑客利用恶意软件监控海外维吾尔人](/articles/rfa/1046048.md)
@@ -594,10 +600,4 @@
 2-23 [解放军连续两天20架次战机扰台](/articles/rfa/1046342.md)
 
 2-23 [王毅指称“美国前政府”打压中国 余茂春：贼喊捉贼](/articles/rfa/1046343.md)
-
-2-22 [网民评论中印冲突消息真伪后被拘](/articles/rfa/1046344.md)
-
-2-22 [中共重整对台统战策略  捧直播主结合线上、线下操作](/articles/rfa/1046345.md)
-
-2-22 [北京高调纪念毛接班人华国锋     学者解读:否定邓小平路线](/articles/rfa/1046346.md)
 
