--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,22 @@
 法广
 ------
 
+3-26 [抵制洋货在中国延烧 拜登冷处理不理这一套 - 要闻分析](/articles/rfi/1032764.md)
+
+3-26 [拜登首场记者会   不想与中国进行“对抗”](/articles/rfi/1032765.md)
+
+3-26 [法国又有三省三度“封城”       单日新增确诊超4.5万](/articles/rfi/1032766.md)
+
+3-26 [欧盟新一轮视频峰会缩水](/articles/rfi/1032767.md)
+
+3-26 [布林肯：西方国家合作重要性更甚以往](/articles/rfi/1032768.md)
+
+3-26 [耐克抵制新疆棉花的话题续发酵 中国明星王一博等终止与其一切合作](/articles/rfi/1032769.md)
+
+3-26 [欧美品牌拒用新疆棉遭中共抵制   陆民恐慌囤货](/articles/rfi/1032770.md)
+
+3-26 [杜特尔特会晤中国大使 对大量船只集结表示担忧](/articles/rfi/1032771.md)
+
 3-26 [雅鲁藏布江下游水电开发工程对水资源的战略性控制——十四五规划正式开启中印争水之战](/articles/rfi/1032772.md)
 
 3-26 [台湾最新民调：近九成人反对北京的“一国两制”](/articles/rfi/1032773.md)
@@ -584,20 +600,4 @@
 3-21 [马斯克否认特斯拉汽车被用于间谍说法](/articles/rfi/1033062.md)
 
 3-21 [爱沙尼亚科学家因充当中国间谍被判入狱三年](/articles/rfi/1033063.md)
-
-3-21 [土耳其退出欧洲女权伊斯坦布尔公约](/articles/rfi/1033064.md)
-
-3-20 [中美闭门会时谈了些什么？ - 法国报纸摘要](/articles/rfi/1033065.md)
-
-3-20 [美副防长：两党均认识到国防部必须把中国作为优先挑战](/articles/rfi/1033066.md)
-
-3-20 [约翰逊视频接见港人家庭：代表全国为你们选择英国感到骄傲](/articles/rfi/1033067.md)
-
-3-20 [日本防卫省首次确认中国055型驱逐舰驶向日本海](/articles/rfi/1033068.md)
-
-3-20 [针对中国：约翰逊与BNO移英港人对话 称是对权利受制港人的承诺](/articles/rfi/1033069.md)
-
-3-20 [香港现首名接种「复必泰」后死亡个案 影响接种率偏低 通关更无期](/articles/rfi/1033070.md)
-
-3-20 [民调：港人对前景、自由失信心 14%「非民主派」亦拟移民](/articles/rfi/1033071.md)
 
