--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+3-26 [中国反制裁英国 前保守党领导人:这是荣誉勋章](/articles/dw/1043314.md)
+
+3-26 [批习近平拥抱专制　拜登誓言不让中国超越](/articles/dw/1043315.md)
+
 3-26 [德语媒体：民主制度不会屈服于强权](/articles/dw/1043316.md)
 
 3-26 [欧洲国际问题权威学者就制裁发表联署声明](/articles/dw/1043317.md)
@@ -596,8 +600,4 @@
 3-3 [因纳瓦尔尼事件  美国决定制裁俄罗斯](/articles/dw/1043612.md)
 
 3-3 [俄羅斯老奶奶們的英雄司機](/articles/dw/1043613.md)
-
-3-3 [新冠停摆措施导致1.68亿儿童失学](/articles/dw/1043614.md)
-
-3-3 [德国专家解析中国扶贫报告 证实北京在新疆实施强迫劳动](/articles/dw/1043615.md)
 
