--- a/lists/金融时报.md
+++ b/lists/金融时报.md
@@ -1,6 +1,12 @@
 金融时报
 ------
 
+3-26 [中国对美直接投资的历史回顾与现实展望](/articles/ft/1045843.md)
+
+3-26 [印度暂停疫苗出口 影响数十国家](/articles/ft/1045844.md)
+
+3-26 [迪拜艺术博览会顽强走向线下](/articles/ft/1045845.md)
+
 3-26 [新冠“三棱镜”：疫苗技术、疫苗经济与疫苗政治](/articles/ft/1045846.md)
 
 3-25 [英国工会呼吁限制职场使用人工智能](/articles/ft/1045847.md)
@@ -594,10 +600,4 @@
 2-2 [科技创新能去社会意识化吗？](/articles/ft/1046141.md)
 
 2-2 [游戏驿站“逼空”的启示](/articles/ft/1046142.md)
-
-2-2 [Twitter在受到莫迪政府施压后封禁印度活动人士账号](/articles/ft/1046143.md)
-
-2-2 [展望2021：货币政策应避免急转弯](/articles/ft/1046144.md)
-
-2-2 [海航集团子公司披露资金滥用后股价大跌](/articles/ft/1046145.md)
 
