--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+3-26 [中国消费者为何抵制H&M、耐克等品牌](/articles/nyt/1047040.md)
+
 3-26 [简报：中国消费者为何掀起抵制潮；拜登称将寻求连任](/articles/nyt/1047041.md)
 
 3-25 [一条走向成功，一条通往死亡：枪案折射亚裔迥异人生路](/articles/nyt/1047042.md)
@@ -598,6 +600,4 @@
 1-7 [美国的盟友和敌人如何看待国会暴乱](/articles/nyt/1047338.md)
 
 1-7 [一场特朗普煽动的暴乱](/articles/nyt/1047339.md)
-
-1-7 [快讯：美国国会正式确认拜登当选总统](/articles/nyt/1047340.md)
 
