--- a/lists/金融时报.md
+++ b/lists/金融时报.md
@@ -1,6 +1,14 @@
 金融时报
 ------
 
+3-26 [拜登表示执政头百天内将完成2亿剂新冠疫苗接种](/articles/ft/1045839.md)
+
+3-26 [美国制裁缅甸军方控制的两家公司](/articles/ft/1045840.md)
+
+3-26 [英国汉学家蓝诗玲谈新译《西游记》](/articles/ft/1045841.md)
+
+3-26 [雇员睡眠时间有时也算“工作时间”——对英国最新判例的分析](/articles/ft/1045842.md)
+
 3-26 [中国对美直接投资的历史回顾与现实展望](/articles/ft/1045843.md)
 
 3-26 [印度暂停疫苗出口 影响数十国家](/articles/ft/1045844.md)
@@ -592,12 +600,4 @@
 2-2 [巴尔干国家转向从中俄购买疫苗](/articles/ft/1046137.md)
 
 2-2 [日本称核能对2050年“净零排放”至关重要](/articles/ft/1046138.md)
-
-2-2 [用机器学习模型深挖美国国务卿的“朋友圈”：他将主导何种对华政策？](/articles/ft/1046139.md)
-
-2-2 [大封锁下必须关注青少年的心理健康](/articles/ft/1046140.md)
-
-2-2 [科技创新能去社会意识化吗？](/articles/ft/1046141.md)
-
-2-2 [游戏驿站“逼空”的启示](/articles/ft/1046142.md)
 
