--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+3-26 [巨轮阻塞航路，苏伊士运河“大堵船”或将持续数月](/articles/nyt/1047038.md)
+
 3-26 [“以强对强”：朝鲜试射导弹挑衅拜登政府](/articles/nyt/1047039.md)
 
 3-26 [中国消费者为何抵制H&M、耐克等品牌](/articles/nyt/1047040.md)
@@ -598,6 +600,4 @@
 1-8 [对美国民主灯塔形象的一记重击](/articles/nyt/1047336.md)
 
 1-8 [简报：民主党人呼吁罢免特朗普；巴西宣布科兴疫苗有效](/articles/nyt/1047337.md)
-
-1-7 [美国的盟友和敌人如何看待国会暴乱](/articles/nyt/1047338.md)
 
