--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+3-26 [中国以新疆“谎言”为由制裁英国实体和个人](/articles/voa/1041959.md)
+
 3-26 [边界议题主导拜登总统首场记者会](/articles/voa/1041960.md)
 
 3-26 [拜登政府让国会有机会决定取消总统战争授权法](/articles/voa/1041961.md)
@@ -598,6 +600,4 @@
 3-17 [美日2+2会谈指名谴责中国行动违背现存国际秩序](/articles/voa/1042257.md)
 
 3-17 [美情报报告：俄罗斯而非中国曾试图干涉美国2020年选举](/articles/voa/1042258.md)
-
-3-17 [中国乌克兰矛盾复杂化 或成俄罗斯可乘之机](/articles/voa/1042259.md)
 
