--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+3-26 [香港选举改革酝酿细节  下周北京料有分晓](/articles/dw/1043308.md)
+
+3-26 [这些年“伤害了中国人民感情”的国际品牌](/articles/dw/1043309.md)
+
 3-26 [新疆棉事件继续延烧 专家：北京「经济绑票」](/articles/dw/1043310.md)
 
 3-26 [反制中国《海警法》 美台签海巡备忘录](/articles/dw/1043311.md)
@@ -596,8 +600,4 @@
 3-3 [德语媒体：中国的经济蓝图](/articles/dw/1043606.md)
 
 3-3 [在线举行柏林电影节的七大理由](/articles/dw/1043607.md)
-
-3-3 [新冠源于实验室说引争议 汉堡大学校长出面辩护](/articles/dw/1043608.md)
-
-3-3 [缅甸安全部队又枪杀7名示威者](/articles/dw/1043609.md)
 
