--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+3-26 [孟晚舟案：法官对警官拒绝作证提出质疑](/articles/dw/1043306.md)
+
+3-26 [「长赐号」何时能脱困？三天还是三周](/articles/dw/1043307.md)
+
 3-26 [香港选举改革酝酿细节  下周北京料有分晓](/articles/dw/1043308.md)
 
 3-26 [这些年“伤害了中国人民感情”的国际品牌](/articles/dw/1043309.md)
@@ -596,8 +600,4 @@
 3-3 [中国两会：五年规划指向何方？](/articles/dw/1043604.md)
 
 3-3 [盖洛普：美国人对中俄好感度创新低](/articles/dw/1043605.md)
-
-3-3 [德语媒体：中国的经济蓝图](/articles/dw/1043606.md)
-
-3-3 [在线举行柏林电影节的七大理由](/articles/dw/1043607.md)
 
