--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,10 @@
 法广
 ------
 
+3-26 [美国就业数据优于预期 亚股乐观劲扬 – 法国国际广播电台 - RFI](/articles/rfi/1032735.md)
+
+3-26 [缅甸军政府政变爆发后 泰国冰毒走私将激增 – 法国国际广播电台 - RFI](/articles/rfi/1032736.md)
+
 3-26 [港股恒生指数收盘劲扬400多点 – 法国国际广播电台 - RFI](/articles/rfi/1032737.md)
 
 3-26 [法国外长对中国大使拒绝道歉表示不满](/articles/rfi/1032738.md)
@@ -596,8 +600,4 @@
 3-22 [法防长：绝对要减少在一些关键领域对中国的依赖](/articles/rfi/1033033.md)
 
 3-22 [美官员称会谈有帮助 中方称将组建气候变化联合工作组](/articles/rfi/1033034.md)
-
-3-22 [法美日比四国在中东举行海上联合军演](/articles/rfi/1033035.md)
-
-3-22 [日德将在未来数周内签署军事情报保护协定](/articles/rfi/1033036.md)
 
