--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,6 +1,10 @@
 中国数字时代
 ------
 
+3-26 [维权网｜北京外卖骑士联盟“盟主”、外卖小哥维权者陈国江的案情通报](/articles/cdt/384502.md)
+
+3-26 [【CDTV】波特王 | 三月粉红月报（上集）：中共通台计划？](/articles/cdt/384503.md)
+
 3-26 [【404文库】大咕咕咕鸡｜现在各种抵制的速度是不是过快](/articles/cdt/384507.md)
 
 3-26 [【立此存照】“吐槽网络暴民”兼“诋毁英烈”，北京27岁女子被刑拘](/articles/cdt/384517.md)
@@ -596,8 +600,4 @@
 2-12 [【立此存照】出播别脆干妈他你 论评发让不都晚春 ​​​​](/articles/cdt/385988.md)
 
 2-12 [维舟｜中国年](/articles/cdt/385989.md)
-
-2-12 [基本常识｜辛苦科普一整年，一台春晚全毁完](/articles/cdt/385992.md)
-
-2-12 [端传媒 | 不想生孩子的中国年轻人：消失的性生活、猫当孩子养（节选）](/articles/cdt/385994.md)
 
