--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+3-26 [英国称港府无权决定外国政府认可哪些护照 将继续发放BNO护照](/articles/voa/1041953.md)
+
+3-26 [中国报复尚未结束，澳大利亚葡萄酒再遭重罚](/articles/voa/1041954.md)
+
 3-26 [收取5G专利费： 华为能否走出困境？](/articles/voa/1041955.md)
 
 3-26 [“美中关系回不去了！”美议员：阿拉斯加只是漫长艰辛交涉的开端](/articles/voa/1041956.md)
@@ -596,8 +600,4 @@
 3-17 [美军高层将领警告：与中国竞争的前线就在美国边界以南](/articles/voa/1042251.md)
 
 3-17 [美将在与日韩磋商后公布对朝鲜政策审查](/articles/voa/1042252.md)
-
-3-17 [白宫要义: 白宫强调朝鲜无核化为目标，美法德英国安官员谈美中2+2会谈](/articles/voa/1042253.md)
-
-3-17 [拜登总统开始“救助到了”之旅](/articles/voa/1042254.md)
 
