--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,12 @@
 法广
 ------
 
+3-26 [孟晚舟案前警官拒出庭作证 加拿大法官质疑 – 法国国际广播电台 - RFI](/articles/rfi/1032732.md)
+
+3-26 [台湾两架F-5E战机高空擦撞的真相 - 台北一周](/articles/rfi/1032733.md)
+
+3-26 [佛州海牛1至3月死亡逾500头 几为过去3年总数 – 法国国际广播电台 - RFI](/articles/rfi/1032734.md)
+
 3-26 [美国就业数据优于预期 亚股乐观劲扬 – 法国国际广播电台 - RFI](/articles/rfi/1032735.md)
 
 3-26 [缅甸军政府政变爆发后 泰国冰毒走私将激增 – 法国国际广播电台 - RFI](/articles/rfi/1032736.md)
@@ -594,10 +600,4 @@
 3-22 [中国当局担忧生鲜农产品在线销售正夯 - 法国报纸摘要](/articles/rfi/1033030.md)
 
 3-22 [墨西哥因防Covid-19 禁传统春分仪式](/articles/rfi/1033031.md)
-
-3-22 [约220艘中国渔船在争议海域集结 菲防长：严重关切](/articles/rfi/1033032.md)
-
-3-22 [法防长：绝对要减少在一些关键领域对中国的依赖](/articles/rfi/1033033.md)
-
-3-22 [美官员称会谈有帮助 中方称将组建气候变化联合工作组](/articles/rfi/1033034.md)
 
