--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+3-26 [抵抗拆迁被指妨碍公务 重庆四人遭重判](/articles/rfa/1046040.md)
+
 3-26 [中方反对“渲染中国军事威胁” 却增强对台军机侵扰](/articles/rfa/1046041.md)
 
 3-26 [一场抵制洋货的“爱国秀”  谁搬石头砸自己的脚？](/articles/rfa/1046042.md)
@@ -598,6 +600,4 @@
 2-23 [洛杉矶数百人集会  反对缅甸政变及其背后中国因素](/articles/rfa/1046338.md)
 
 2-23 [博明：中国试图掩盖新冠疫情](/articles/rfa/1046339.md)
-
-2-23 [加拿大对华政策愈发强悍   将表决维吾尔人遭灭绝法案](/articles/rfa/1046340.md)
 
