--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,10 @@
 自由亚洲电台
 ------
 
+3-27 [英国坚决支持遭中国制裁人士　并继续谴责新疆侵犯人权行为](/articles/rfa/1046036.md)
+
+3-27 [香港人才和资金大出逃  去年汇入加拿大资金创新高](/articles/rfa/1046037.md)
+
 3-26 [台湾艺人卷入新疆棉解约风暴  特斯拉恐成下个猎巫目标](/articles/rfa/1046038.md)
 
 3-26 [台美签署设立“海巡工作小组”备忘录](/articles/rfa/1046039.md)
@@ -596,8 +600,4 @@
 2-23 [BBC被批用“阴间滤镜”渲染武汉气氛](/articles/rfa/1046334.md)
 
 2-23 [一号文件：脱贫成果和粮食安全决不能出问题](/articles/rfa/1046335.md)
-
-2-23 [王毅声称新疆从无种族灭绝 遭多国抨击](/articles/rfa/1046336.md)
-
-2-23 [CNN再揭新疆拘留营性侵内幕](/articles/rfa/1046337.md)
 
