--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+3-27 [北京掀起抵制西方公司风潮 白宫表示密切关注中国强迫劳动问题](/articles/voa/1041945.md)
+
+3-27 [前美疾控中心主任认为新冠病毒源自武汉实验室 弗契医生称这不代表多数美卫生专家意见](/articles/voa/1041946.md)
+
 3-27 [乌克兰不怕得罪中国，力挺加拿大并冻结马达西奇股份](/articles/voa/1041947.md)
 
 3-27 [港人国际商会: 港府无权要求外国领事馆不承认BNO护照](/articles/voa/1041948.md)
@@ -596,8 +600,4 @@
 3-17 [女老师训练幼犬帮助有需要的人](/articles/voa/1042243.md)
 
 3-17 [拜登政府官员：对中国策略是全球性的，政府各部门协调一致不容中国分化](/articles/voa/1042244.md)
-
-3-17 [抗衡北京国际势力 美国会民主党提大增20%外交预算](/articles/voa/1042245.md)
-
-3-17 [亚裔美国人团体收到近3800份仇恨和偏见事例报告](/articles/voa/1042246.md)
 
