--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,8 @@
 法广
 ------
 
+3-27 [习近平要东升西降 别吃中国的饭砸中国的锅](/articles/rfi/1032695.md)
+
 3-27 [美股劲扬 道琼和标普指数创新高 – 法国国际广播电台 - RFI](/articles/rfi/1032696.md)
 
 3-27 [欧美经济报喜 欧股收红 – 法国国际广播电台 - RFI](/articles/rfi/1032697.md)
@@ -598,6 +600,4 @@
 3-22 [加拿大人康明凯被控间谍案周一闭门开审 - 要闻解说](/articles/rfi/1032993.md)
 
 3-22 [遭缅甸当局拘押BBC记者获释 – 法国国际广播电台 - RFI](/articles/rfi/1032994.md)
-
-3-22 [东京奥运不开放外国游客 85%日本民众认同 – 法国国际广播电台 - RFI](/articles/rfi/1032995.md)
 
