--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,6 +1,8 @@
 中国数字时代
 ------
 
+3-27 [【CDT敏感词周报】第十七期：H&M、支持新疆人、YUEJIPENGCI、加速主义](/articles/cdt/384497.md)
+
 3-26 [有病要讀書plus｜抵制H&M的时候请你做个人](/articles/cdt/384499.md)
 
 3-26 [维权网｜北京外卖骑士联盟“盟主”、外卖小哥维权者陈国江的案情通报](/articles/cdt/384502.md)
@@ -598,6 +600,4 @@
 2-12 [王五四：坚持看完春晚并还看重播的人才值得骄傲](/articles/cdt/385976.md)
 
 2-12 [【新闻连连看】习近平与拜登新年通电话 中方报道“避重就轻”？](/articles/cdt/385982.md)
-
-2-12 [【立此存照】出播别脆干妈他你 论评发让不都晚春 ​​​​](/articles/cdt/385988.md)
 
