--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+3-27 [台海戰爭「比想像中快」 印太戰略下日本能否幫忙?](/articles/dw/1043297.md)
+
 3-26 [球员声援人权 德国会抵制2022世界杯吗？](/articles/dw/1043298.md)
 
 3-26 [德国品牌Hugo Boss挺新疆棉？](/articles/dw/1043299.md)
@@ -598,6 +600,4 @@
 3-4 [在线打开柏林电影节的七大理由](/articles/dw/1043595.md)
 
 3-4 [澳洲报告显示华人受到歧视](/articles/dw/1043596.md)
-
-3-4 [立陶宛不参加「17+1」机制 计划在台设代表处](/articles/dw/1043597.md)
 
