--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,8 @@
 法广
 ------
 
+3-27 [中国如何掌控香港 - 法国报纸摘要](/articles/rfi/1032682.md)
+
 3-27 [香港去年透过电子转账移走436亿加拿大元](/articles/rfi/1032683.md)
 
 3-27 [中英关系黄金期告终英外交部指中方应让联合国彻查](/articles/rfi/1032684.md)
@@ -598,6 +600,4 @@
 3-23 [香港选制修改在即：中国人大常委会定日子开议](/articles/rfi/1032980.md)
 
 3-23 [北京报复列荷兰议员 中国大使受召见质问 伦敦宣布制裁](/articles/rfi/1032981.md)
-
-3-23 [俄外长北京结帮 促少用美元](/articles/rfi/1032982.md)
 
