--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,10 @@
 法广
 ------
 
+3-27 [北部城镇遇叛军攻击 莫三比克180多人受困饭店 – 法国国际广播电台 - RFI](/articles/rfi/1032680.md)
+
+3-27 [德国队中场战将满满 勒夫最甜蜜负荷 – 法国国际广播电台 - RFI](/articles/rfi/1032681.md)
+
 3-27 [中国如何掌控香港 - 法国报纸摘要](/articles/rfi/1032682.md)
 
 3-27 [香港去年透过电子转账移走436亿加拿大元](/articles/rfi/1032683.md)
@@ -596,8 +600,4 @@
 3-23 [应对中国 拜登的政治杠杆](/articles/rfi/1032978.md)
 
 3-23 [220艘海上民兵船怼菲律宾？中国说渔船避风而已](/articles/rfi/1032979.md)
-
-3-23 [香港选制修改在即：中国人大常委会定日子开议](/articles/rfi/1032980.md)
-
-3-23 [北京报复列荷兰议员 中国大使受召见质问 伦敦宣布制裁](/articles/rfi/1032981.md)
 
