--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+3-27 [德国疫情：第三波会比前两波还糟糕](/articles/dw/1043295.md)
+
 3-27 [德黑兰：中伊周六签署25年合作协议](/articles/dw/1043296.md)
 
 3-27 [台海戰爭「比想像中快」 印太戰略下日本能否幫忙?](/articles/dw/1043297.md)
@@ -598,6 +600,4 @@
 3-4 [德国抗疫：停摆继续延长，措施稍予宽松](/articles/dw/1043593.md)
 
 3-4 [SpaceX原型艦成功著陸後……原地爆炸](/articles/dw/1043594.md)
-
-3-4 [在线打开柏林电影节的七大理由](/articles/dw/1043595.md)
 
