--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+3-27 [20架中国军机进入台湾防空识别区](/articles/voa/1041935.md)
+
 3-27 [为摆脱美国制裁 中俄急与美元脱钩](/articles/voa/1041936.md)
 
 3-27 [北京的人身攻击使流亡维吾尔活动人士更加大胆发声](/articles/voa/1041937.md)
@@ -598,6 +600,4 @@
 3-18 [欧盟同意就侵犯人权问题对中国官员实施制裁](/articles/voa/1042233.md)
 
 3-18 [美国亚特兰大发生连环枪击案 8人遭枪杀，6人是亚裔，嫌犯落网](/articles/voa/1042234.md)
-
-3-18 [拜登政府高级官员离开日本抵达亚洲之行最后一站韩国](/articles/voa/1042235.md)
 
