--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,8 @@
 法广
 ------
 
+3-27 [埃及大楼倒塌 造成5死24伤 – 法国国际广播电台 - RFI](/articles/rfi/1032679.md)
+
 3-27 [北部城镇遇叛军攻击 莫三比克180多人受困饭店 – 法国国际广播电台 - RFI](/articles/rfi/1032680.md)
 
 3-27 [德国队中场战将满满 勒夫最甜蜜负荷 – 法国国际广播电台 - RFI](/articles/rfi/1032681.md)
@@ -598,6 +600,4 @@
 3-23 [欧盟吁 勿以抗寄生虫药丝每妥治COVID－19 – 法国国际广播电台 - RFI](/articles/rfi/1032977.md)
 
 3-23 [应对中国 拜登的政治杠杆](/articles/rfi/1032978.md)
-
-3-23 [220艘海上民兵船怼菲律宾？中国说渔船避风而已](/articles/rfi/1032979.md)
 
