--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+3-27 [又有数十人被打死，缅甸政变以来死亡人数接近400人](/articles/voa/1041932.md)
+
+3-27 [习近平核心下 李克强为什么还与习不同调？](/articles/voa/1041933.md)
+
 3-27 [商务部长雷蒙多：美国正在为反击中国制定战略](/articles/voa/1041934.md)
 
 3-27 [20架中国军机进入台湾防空识别区](/articles/voa/1041935.md)
@@ -596,8 +600,4 @@
 3-18 [日本短信通讯巨头Line的中国工程师接触用户信息受到政府调查](/articles/voa/1042230.md)
 
 3-18 [从强迫劳动到种族灭绝 新疆问题继续引起全球关注](/articles/voa/1042231.md)
-
-3-18 [因应中共军机扰台 台空军拟增加今年预算](/articles/voa/1042232.md)
-
-3-18 [欧盟同意就侵犯人权问题对中国官员实施制裁](/articles/voa/1042233.md)
 
