--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+3-28 [继英、欧后 中国再出拳制裁美国和加拿大](/articles/dw/1043288.md)
+
+3-28 [回应新疆问题 中国外交部记者会罕见播放视频](/articles/dw/1043289.md)
+
 3-27 [拜登邀请普京和习近平参加气候峰会](/articles/dw/1043290.md)
 
 3-27 [德语媒体：冷战2.0已经到来？](/articles/dw/1043291.md)
@@ -596,8 +600,4 @@
 3-4 [民主派初选案：原本15人准保释 律政司上诉、继续还押](/articles/dw/1043586.md)
 
 3-4 [德语媒体：阿里巴巴与计划经济](/articles/dw/1043587.md)
-
-3-4 [阿斯利康疫苗到底好不好？](/articles/dw/1043588.md)
-
-3-4 [评论：这不是德国战胜新冠的奋起之态](/articles/dw/1043589.md)
 
