--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+3-28 [美国特使访问土耳其，推动阿富汗和平进程](/articles/voa/1041927.md)
+
 3-28 [中国伊朗签署25年合作协议](/articles/voa/1041928.md)
 
 3-28 [拜登邀请普京习近平参加气候峰会，美中峰会有没有可能？](/articles/voa/1041929.md)
@@ -598,6 +600,4 @@
 3-18 [法国回绝中国警告：参议员想见谁就见谁](/articles/voa/1042225.md)
 
 3-18 [参议院确认戴琪出任美国贸易代表](/articles/voa/1042226.md)
-
-3-18 [美国开始撤销中国通信公司在美国的经营权](/articles/voa/1042227.md)
 
