--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,6 +1,8 @@
 中国数字时代
 ------
 
+3-28 [【旧闻重温】大赦国际 | 一个新疆汉族人的告白：那是我永远回不去的故乡](/articles/cdt/384466.md)
+
 3-28 [【旧闻重温】湖玛Humar | 如何幸存](/articles/cdt/384469.md)
 
 3-27 [老鱼吹牛皮 | “环球时报”，又欺负我们不懂英文？](/articles/cdt/384476.md)
@@ -598,6 +600,4 @@
 2-14 [【中国哭墙】党要以什么方式来歌颂一百年（2月7-13日，2021年）](/articles/cdt/385959.md)
 
 2-13 [【网络民议】武汉市民除夕凌晨上街买花](/articles/cdt/385966.md)
-
-2-12 [BBC｜BBC对中国全面禁播其世界新闻台表示“失望”](/articles/cdt/385971.md)
 
