--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+3-28 [缅甸军方节日继续镇压，打死一百多人](/articles/voa/1041925.md)
+
 3-28 [缅甸军方继续镇压，至少击毙90人](/articles/voa/1041926.md)
 
 3-28 [美国特使访问土耳其，推动阿富汗和平进程](/articles/voa/1041927.md)
@@ -598,6 +600,4 @@
 3-18 [多名亚裔遇害 亚特兰大枪击案令美国亚裔社区更加不安](/articles/voa/1042223.md)
 
 3-18 [拜登对一些美国人反对接种新冠疫苗表示不解](/articles/voa/1042224.md)
-
-3-18 [法国回绝中国警告：参议员想见谁就见谁](/articles/voa/1042225.md)
 
