--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,7 +1,11 @@
 中国数字时代
 ------
 
+3-28 [江湖眼 | H&M事件的背后，事关许多工人的饭碗](/articles/cdt/384450.md)
+
 3-28 [南方找北 | 最该抵制的是蠢货！](/articles/cdt/384458.md)
+
+3-28 [品葱 | 本人亲身经历：南疆，一个真实的1984世界](/articles/cdt/384461.md)
 
 3-28 [【旧闻重温】大赦国际 | 一个新疆汉族人的告白：那是我永远回不去的故乡](/articles/cdt/384466.md)
 
@@ -596,8 +600,4 @@
 2-13 [德国之声 | 长平观察：真相比平反更重要](/articles/cdt/385952.md)
 
 2-13 [端传媒 | 疫后春晚：一场关于扶贫与大国梦的空洞喧嚣（节选）](/articles/cdt/385954.md)
-
-2-13 [橙雨伞 | 没想到这次连男性也被羞辱了](/articles/cdt/385958.md)
-
-2-14 [【中国哭墙】党要以什么方式来歌颂一百年（2月7-13日，2021年）](/articles/cdt/385959.md)
 
