--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,6 +1,8 @@
 中国数字时代
 ------
 
+3-28 [【CDTV】C.S.B.Q 乐队《未来的宝藏》](/articles/cdt/384445.md)
+
 3-28 [谷雨实验室 | 那些清北毕业生，回到了教培工厂](/articles/cdt/384447.md)
 
 3-28 [立场新闻 | 12港人之一郑子豪父母专访：儿子关心同案其他人](/articles/cdt/384449.md)
@@ -598,6 +600,4 @@
 2-13 [冰川思享号｜侯虹斌 ：春晚一股浓浓的“爹”味，我尴尬症都犯了！](/articles/cdt/385947.md)
 
 2-13 [右手墨迹2｜武汉在哭泣](/articles/cdt/385949.md)
-
-2-13 [【网络民议】网传北京某老师要求学生共享手机屏幕，检查“不良应用”](/articles/cdt/385950.md)
 
