--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+3-28 [美国等12国防长罕见发表联合声明谴责缅甸军方杀戮平民](/articles/voa/1041920.md)
+
+3-28 [中国拟推新广电法 核心价值观与“薪酬封顶”引争议](/articles/voa/1041921.md)
+
 3-28 [菲战机飞越南中国海争议水域中数百中国渔船](/articles/voa/1041922.md)
 
 3-28 [美加谴责中国因侵犯维吾尔人权问题对美加实体和个人实施报复性制裁](/articles/voa/1041923.md)
@@ -596,8 +600,4 @@
 3-18 [盖洛普民调：创纪录比例的美国人认为中国是最大敌人](/articles/voa/1042218.md)
 
 3-18 [美全国制造商协会敦促拜登迅速制定对华新战略 加强与中国竞争的能力](/articles/voa/1042219.md)
-
-3-18 [美日共同声明纳入台海文字 专家称对日本是“重要一步”](/articles/voa/1042220.md)
-
-3-18 [港藏维人集会呼吁美中会谈强调中国人权问题](/articles/voa/1042221.md)
 
