--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+3-29 [华尔街日报专访戴琪：美国目前还没准备好取消对中国的进口关税](/articles/voa/1041917.md)
+
 3-29 [台湾总统蔡英文呼吁北京不要“放任”民间抵制潮](/articles/voa/1041918.md)
 
 3-29 [不理国际谴责 普京为何力挺缅甸独裁军头？](/articles/voa/1041919.md)
@@ -598,6 +600,4 @@
 3-18 [英国计划在重大防务评估中对抗来自中国的挑战](/articles/voa/1042215.md)
 
 3-18 [美国官员反驳恐怖分子试图经墨西哥进入美国的指称](/articles/voa/1042216.md)
-
-3-18 [中国在缅工厂因何遇袭？缅甸人为什么对中国感到愤怒？](/articles/voa/1042217.md)
 
