--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,8 @@
 法广
 ------
 
+3-29 [印度：莫迪政府决心驱逐罗兴亚难民](/articles/rfi/1032617.md)
+
 3-29 [西班牙不惧Covid疫情办五千人音乐会](/articles/rfi/1032618.md)
 
 3-29 [戴琪：美国没有准备好近期取消对华关税](/articles/rfi/1032619.md)
@@ -598,6 +600,4 @@
 3-24 [欧洲多国急召见中国大使 表达不满](/articles/rfi/1032915.md)
 
 3-23 [日本陆军酝酿全军演习 忧虑钓鱼岛安全](/articles/rfi/1032916.md)
-
-3-23 [法外交部亚太司长召见卢沙野 告知法国很大不满](/articles/rfi/1032917.md)
 
