--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+3-29 [拜登将发表经济政策讲话，美对中关税维持不变](/articles/voa/1041914.md)
+
+3-29 [12 港人案中李宇轩返港后一星期仍下落不明](/articles/voa/1041915.md)
+
+3-29 [美国誓言要俄罗斯为其行动承担“后果”](/articles/voa/1041916.md)
+
 3-29 [华尔街日报专访戴琪：美国目前还没准备好取消对中国的进口关税](/articles/voa/1041917.md)
 
 3-29 [台湾总统蔡英文呼吁北京不要“放任”民间抵制潮](/articles/voa/1041918.md)
@@ -594,10 +600,4 @@
 3-18 [名牌泳装厂生产口罩医袍抗新冠](/articles/voa/1042212.md)
 
 3-18 [中国疫苗外交声势浩大得分几多？](/articles/voa/1042213.md)
-
-3-18 [新冠病毒颗粒小全球夺命逾百万](/articles/voa/1042214.md)
-
-3-18 [英国计划在重大防务评估中对抗来自中国的挑战](/articles/voa/1042215.md)
-
-3-18 [美国官员反驳恐怖分子试图经墨西哥进入美国的指称](/articles/voa/1042216.md)
 
