--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -25,6 +25,8 @@
 
 3-27 [立场新闻 | 消息指 RTHK《铿锵集》等节目如未能过关被抽起](/articles/cdt/384481.md)
 
+3-29 [【中国哭墙】我想远离这片充满仇恨与歧视的土地（3月22-28日，2021年）](/articles/cdt/384490.md)
+
 3-27 [【CDT敏感词周报】第十七期：H&M、支持新疆人、YUEJIPENGCI、加速主义](/articles/cdt/384497.md)
 
 3-26 [有病要讀書plus｜抵制H&M的时候请你做个人](/articles/cdt/384499.md)
@@ -598,6 +600,4 @@
 2-13 [哎呀音乐｜被称为中国第一首贺岁歌的《恭喜恭喜》，你真的听懂了吗？](/articles/cdt/385939.md)
 
 2-13 [【异闻观止】人民日报：“春晚的总体美誉度达96.17%”](/articles/cdt/385941.md)
-
-2-13 [冰川思享号｜侯虹斌 ：春晚一股浓浓的“爹”味，我尴尬症都犯了！](/articles/cdt/385947.md)
 
