--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+3-29 [旧金山亚裔反歧视游行  因香港维吾尔人权问题内部起冲突](/articles/rfa/1046029.md)
+
 3-27 [中国揪出幕后“黑手”  美国要在新疆搞颜色革命？](/articles/rfa/1046030.md)
 
 3-27 [拜登参加欧盟峰会      呼吁确保民主国家制定规则](/articles/rfa/1046031.md)
@@ -598,6 +600,4 @@
 2-23 [侵害英雄烈士名誉罪下月实施  网民将动辄得咎](/articles/rfa/1046327.md)
 
 2-23 [香港自由及法治指标创新低    首席法官刚上任民望插水](/articles/rfa/1046328.md)
-
-2-23 [发起谴责缅甸军政府签名运动   广东维权人士肖育辉被传唤](/articles/rfa/1046329.md)
 
