--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,8 @@
 法广
 ------
 
+3-29 [篮板王德拉蒙去向确定 经纪人证实加盟湖人 – 法国国际广播电台 - RFI](/articles/rfi/1032604.md)
+
 3-29 [亲北京媒体报道环球时报“翻车”](/articles/rfi/1032605.md)
 
 3-29 [缅甸镇压单日酿100多人死亡 拜登：相当骇人听闻 – 法国国际广播电台 - RFI](/articles/rfi/1032606.md)
@@ -598,6 +600,4 @@
 3-24 [美国国务卿布林肯访北约展示团结 - 要闻分析](/articles/rfi/1032902.md)
 
 3-24 [北京对欧盟反制裁，中欧紧张局势进一步升级 - 法国世界报](/articles/rfi/1032903.md)
-
-3-24 [埃尔多安撤换土耳其央行行长 - 今日经济](/articles/rfi/1032904.md)
 
