--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+3-29 [美国对华技术出口限制是否该更强硬？华盛顿争论不休](/articles/nyt/1047034.md)
+
 3-29 [简报：中伊签署25年全面合作协议；拜登如何定义中国威胁](/articles/nyt/1047035.md)
 
 3-26 [我们该如何谈论这些针对亚裔的袭击](/articles/nyt/1047036.md)
@@ -598,6 +600,4 @@
 1-8 [特朗普和他的共和党盟友会受到惩罚吗？](/articles/nyt/1047332.md)
 
 1-8 [向法西斯主义者特朗普绥靖的下场](/articles/nyt/1047333.md)
-
-1-8 [一文读懂能罢免总统的宪法第25修正案](/articles/nyt/1047334.md)
 
