--- a/lists/路透.md
+++ b/lists/路透.md
@@ -1,6 +1,16 @@
 路透
 ------
 
+3-29 [亚洲股市气氛谨慎 等待拜登基础设施支出计划细节](/articles/reuters/1039986.md)
+
+3-29 [一周展望：美股投资者未雨绸缪 转向公用事业股规避潜在风险](/articles/reuters/1039987.md)
+
+3-29 [瑞萨电子芯片厂火灾影响机台数量高于先前估算--日经新闻](/articles/reuters/1039988.md)
+
+3-29 [《图表新闻》五大主题：季末拉锯战](/articles/reuters/1039989.md)
+
+3-29 [新疆政府回应H&M等涉新疆棉风波：企业盲目裹挟到所谓的制裁行动当中是不理智的](/articles/reuters/1039990.md)
+
 3-29 [华为全资入股深圳讯联智付 拿下第三方支付牌照布局未来金融服务](/articles/reuters/1039991.md)
 
 3-29 [中国国企前两月利润总额同比增1.5倍 扣除低基数因素后增10.2%--财政部](/articles/reuters/1039992.md)
@@ -590,14 +600,4 @@
 3-22 [美国亚裔参议员称 亚特兰大六名亚裔女性遭枪杀“是出于种族主义动机”](/articles/reuters/1040284.md)
 
 3-22 [中国央行行长：要用好正常的货币政策空间 在支持经济增长与防范风险之间平衡](/articles/reuters/1040285.md)
-
-3-22 [美国国务卿布林肯将访问欧洲 出席北约外长会议并会晤欧盟官员](/articles/reuters/1040286.md)
-
-3-22 [路透测算的人民币中间价料开在6.5177元附近 较上日贬79点](/articles/reuters/1040287.md)
-
-3-22 [土耳其鹰派央行总裁突然遭撤换 里拉暴跌逾16%](/articles/reuters/1040288.md)
-
-3-22 [伊朗最高领导人称无法信任美国承诺 要求先解除制裁再谈重返协议](/articles/reuters/1040289.md)
-
-3-22 [IMF认为有全球经济复苏增强的迹象 但重大风险犹存](/articles/reuters/1040290.md)
 
