--- a/lists/路透.md
+++ b/lists/路透.md
@@ -1,6 +1,8 @@
 路透
 ------
 
+3-29 [缅甸暴力冲突在周六逾百人遇害后并未停歇 活动人士吁民族武装组织支持](/articles/reuters/1039979.md)
+
 3-29 [委内瑞拉称Facebook冻结该国总统马杜罗页面 是在搞“数字极权”](/articles/reuters/1039980.md)
 
 3-29 [造成苏伊士运河堵塞的搁浅货轮脱浅--Inch Cape](/articles/reuters/1039981.md)
@@ -598,6 +600,4 @@
 3-22 [摩根大通将投资招商银行财富管理部门27亿元人民币](/articles/reuters/1040277.md)
 
 3-22 [缅甸又有两名抗议者被杀害 军政府面临的内外部压力加大](/articles/reuters/1040278.md)
-
-3-22 [中国发改委主任称中国经济恢复基础还不牢固 长期向好基本面未改变](/articles/reuters/1040279.md)
 
