--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+3-29 [腾讯步阿里巴巴后尘     中国展开电商反垄断调查](/articles/rfa/1046028.md)
+
 3-29 [旧金山亚裔反歧视游行  因香港维吾尔人权问题内部起冲突](/articles/rfa/1046029.md)
 
 3-27 [中国揪出幕后“黑手”  美国要在新疆搞颜色革命？](/articles/rfa/1046030.md)
@@ -598,6 +600,4 @@
 2-23 [藏人怒批中国外长王毅“睁眼说瞎话”](/articles/rfa/1046326.md)
 
 2-23 [侵害英雄烈士名誉罪下月实施  网民将动辄得咎](/articles/rfa/1046327.md)
-
-2-23 [香港自由及法治指标创新低    首席法官刚上任民望插水](/articles/rfa/1046328.md)
 
