--- a/lists/路透.md
+++ b/lists/路透.md
@@ -1,6 +1,28 @@
 路透
 ------
 
+3-29 [针对新疆棉风波 中国外交部称希望有关企业“不要沦为某些政治势力的工具”](/articles/reuters/1039968.md)
+
+3-29 [阿里巴巴投资的怪兽充电在赴美上市前陷入法律纠纷](/articles/reuters/1039969.md)
+
+3-29 [德意志银行对Archegos Capital的曝险比其他同行少很多--消息人士](/articles/reuters/1039970.md)
+
+3-29 [中国影子银行活动今年料进一步收缩 经济体系杠杆率将逐渐稳定--穆迪](/articles/reuters/1039971.md)
+
+3-29 [调查：中国3月官方制造业PMI料升至51.2 “就地过年”令节后复工提速](/articles/reuters/1039972.md)
+
+3-29 [阿布扎比将兴建新厂 年底开始生产中国国药集团的新冠疫苗](/articles/reuters/1039973.md)
+
+3-29 [中国股市收高 今年前两月工业企业利润同比大增提振人气](/articles/reuters/1039974.md)
+
+3-29 [图表新闻：中国稀土价格持续上涨 受缅甸供应和环保核查担忧推动](/articles/reuters/1039975.md)
+
+3-29 [热点聚焦：加拿大的召唤？ 香港民众将巨额资金移往海外](/articles/reuters/1039976.md)
+
+3-29 [WHO称新冠病毒可能通过另一种动物从蝙蝠传播给人类--美联社](/articles/reuters/1039977.md)
+
+3-29 [苏伊士运河管理局称长赐号已经开始成功浮起](/articles/reuters/1039978.md)
+
 3-29 [缅甸暴力冲突在周六逾百人遇害后并未停歇 活动人士吁民族武装组织支持](/articles/reuters/1039979.md)
 
 3-29 [委内瑞拉称Facebook冻结该国总统马杜罗页面 是在搞“数字极权”](/articles/reuters/1039980.md)
@@ -578,26 +600,4 @@
 3-22 [中国划定App搜集个人信息范围 不得因用户拒绝提供非必要信息而不予服务](/articles/reuters/1040266.md)
 
 3-22 [丰田等日本汽车大厂忙着评估瑞萨电子车用芯片厂失火的影响](/articles/reuters/1040267.md)
-
-3-22 [香港特首完成接种第二剂新冠疫苗 呼吁更多市民接种并指“效益远比风险高”](/articles/reuters/1040268.md)
-
-3-22 [澳洲悉尼遭遇60年来最大洪水 将疏散数千人](/articles/reuters/1040269.md)
-
-3-22 [《图表新闻》五大主题：如何处置近万亿瑞郎外储？ 瑞士央行又犯愁](/articles/reuters/1040270.md)
-
-3-22 [图表新闻：全球股票基金连续11周呈资金净流入--理柏](/articles/reuters/1040271.md)
-
-3-22 [日本今年夏季奥运会将不允许外国观众入场--组委会官员](/articles/reuters/1040272.md)
-
-3-22 [中国3月LPR如期连11月持平 新兴经济体加息潮涌央行仍按兵不动](/articles/reuters/1040273.md)
-
-3-22 [高通执行长称旧制程芯片供应短缺局面有望很快缓解](/articles/reuters/1040274.md)
-
-3-22 [加拿大驻中国使馆官员称 希望进入加国公民康明凯的审理现场](/articles/reuters/1040275.md)
-
-3-22 [FIFA乐见英国-爱尔兰联合申办2030足球世界杯 但中国申办大门仍敞开](/articles/reuters/1040276.md)
-
-3-22 [摩根大通将投资招商银行财富管理部门27亿元人民币](/articles/reuters/1040277.md)
-
-3-22 [缅甸又有两名抗议者被杀害 军政府面临的内外部压力加大](/articles/reuters/1040278.md)
 
