--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+3-29 [堵在苏伊士运河的长赐号货轮部分脱浅](/articles/voa/1041905.md)
+
 3-29 [联合国秘书长：正与中国就人权官员访问新疆严肃谈判](/articles/voa/1041906.md)
 
 3-29 [布林肯质疑中国插手世卫新冠起源报告 强调以改革防止疫情重演](/articles/voa/1041907.md)
@@ -598,6 +600,4 @@
 3-18 [专家：美韩2+2会议显示以美日韩同盟为中心打造东亚秩序](/articles/voa/1042203.md)
 
 3-18 [老挝签订电网特许协议，中國全面控管25年](/articles/voa/1042204.md)
-
-3-18 [华日：中国打算在阿拉斯加会谈时要求美国扭转许多特朗普对华政策](/articles/voa/1042205.md)
 
