--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+3-29 [中国推进疫苗外交 阿联酋设厂生产国药疫苗](/articles/dw/1043264.md)
+
 3-29 [买不到？  台湾BioNTech疫苗采购无进展](/articles/dw/1043265.md)
 
 3-29 [世卫组织新冠病毒起源报告内部草案提前曝光](/articles/dw/1043266.md)
@@ -598,6 +600,4 @@
 3-6 [新冠重击加勒比旅游经济 中印疫苗闻声而至](/articles/dw/1043562.md)
 
 3-6 [全球经济自由排行榜发布 香港澳门被除名](/articles/dw/1043563.md)
-
-3-6 [关于绿色能源的6个创意！](/articles/dw/1043564.md)
 
