--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,6 +1,8 @@
 中国数字时代
 ------
 
+3-29 [导筒directube｜香港电影的黑色星期一](/articles/cdt/384403.md)
+
 3-29 [曹教授｜连执法权都能外包 政府让保安公司道歉好意思吗](/articles/cdt/384408.md)
 
 3-29 [狐度工作室｜凉山冕宁，买根火柴都要实名](/articles/cdt/384409.md)
@@ -598,6 +600,4 @@
 2-14 [大鱼论事  |  沸腾的物价和楼市：闲人闪开，别崩身上血](/articles/cdt/385920.md)
 
 2-14 [非常魏道  |  能看完今年春晚的人你惹不起](/articles/cdt/385921.md)
-
-2-14 [德国之声 | 世卫专家：中国拒提供早期新冠病例原始数据](/articles/cdt/385929.md)
 
