--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+3-29 [民进党立委穿“抵制新疆棉”品牌   声援维族人权](/articles/rfa/1046024.md)
+
 3-29 [协助港人两律师疑遭报复 律所被逼解散并禁办签证](/articles/rfa/1046025.md)
 
 3-29 [中国拉维族人澄清人权问题  维吾尔代表：族人被迫配合演出](/articles/rfa/1046026.md)
@@ -598,6 +600,4 @@
 2-24 [专访:  一封求救信引发的对中国强迫劳动的调查](/articles/rfa/1046322.md)
 
 2-24 [加拿大国会通过动议  认定维吾尔遭种族灭绝](/articles/rfa/1046323.md)
-
-2-24 [中国2020舆论宣传大拐弯 只有他是不变量](/articles/rfa/1046324.md)
 
