--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,14 @@
 法广
 ------
 
+3-30 [【视频】疫情下比萨斜塔进行维护修缮](/articles/rfi/1032549.md)
+
+3-30 [翻转暴力统治 联合国吁全球对缅甸军政府施压 – 法国国际广播电台 - RFI](/articles/rfi/1032550.md)
+
+3-30 [台湾是北京与华盛顿紧张关系加剧的主因 - 法国报纸摘要](/articles/rfi/1032551.md)
+
+3-30 [阿拉斯加会谈后，美国也不吃中国这一套了 - 美国专栏](/articles/rfi/1032552.md)
+
 3-30 [饮料冒充假奶粉再现 中国幼童智力受损](/articles/rfi/1032553.md)
 
 3-30 [谭德赛证实收到溯源报告：所有新冠起源假说需进一步研究](/articles/rfi/1032554.md)
@@ -592,12 +600,4 @@
 3-24 [220艘渔船集结牛轭礁 菲律宾不相信躲雨说 担忧占领前奏](/articles/rfi/1032847.md)
 
 3-24 [H&amp;M拒用新疆棉 中国报复抵制共青团再吼不吃这一套](/articles/rfi/1032848.md)
-
-3-24 [中国突然发力加大宣传新疆“美好生活”？](/articles/rfi/1032849.md)
-
-3-24 [美国为何淡化处理朝鲜最新导弹试射？](/articles/rfi/1032850.md)
-
-3-24 [欧洲联盟加强疫苗出口管制 防止不公平单向输出 – 法国国际广播电台 - RFI](/articles/rfi/1032851.md)
-
-3-24 [德国复活节加强封锁挨批 消息称政府将放松管制 – 法国国际广播电台 - RFI](/articles/rfi/1032852.md)
 
