--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,12 @@
 自由亚洲电台
 ------
 
+3-30 [中国制裁美加  被制裁的庄文浩称是“荣誉”](/articles/rfa/1046021.md)
+
+3-30 [中伊签署二十五年全面合作协议  绕过美元结算体系？](/articles/rfa/1046022.md)
+
+3-30 [英法高官接见遭中国制裁议员以表支持](/articles/rfa/1046023.md)
+
 3-29 [民进党立委穿“抵制新疆棉”品牌   声援维族人权](/articles/rfa/1046024.md)
 
 3-29 [协助港人两律师疑遭报复 律所被逼解散并禁办签证](/articles/rfa/1046025.md)
@@ -594,10 +600,4 @@
 2-24 [河北网民因纪念疫情的网文被判刑](/articles/rfa/1046319.md)
 
 2-24 [未获世卫批准却大搞疫苗外交  北京或另有所求](/articles/rfa/1046320.md)
-
-2-24 [CGTN被英国吊销执照 另辟途径找法国重获播映权](/articles/rfa/1046321.md)
-
-2-24 [专访:  一封求救信引发的对中国强迫劳动的调查](/articles/rfa/1046322.md)
-
-2-24 [加拿大国会通过动议  认定维吾尔遭种族灭绝](/articles/rfa/1046323.md)
 
