--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+3-30 [香港多项民调指逾30%受访者计划移民 65%市民对政治前景没信心](/articles/voa/1041890.md)
+
+3-30 [一组联合国人权专家对中国政府据称对维吾尔人任意拘押并强迫劳动“深感关注”](/articles/voa/1041891.md)
+
+3-30 [美国宣布立即暂停实施与缅甸的贸易投资协议](/articles/voa/1041892.md)
+
 3-30 [日本政界人士呼吁首相菅义伟加入西方国家制裁中国侵犯人权行为](/articles/voa/1041893.md)
 
 3-30 [时事大家谈: 中国同时与欧美交恶，习近平拉开中西对抗的铁幕？](/articles/voa/1041894.md)
@@ -594,10 +600,4 @@
 3-19 [应对中俄 乌克兰日本加强防务合作](/articles/voa/1042188.md)
 
 3-19 [香港多个民主派政党退出联合平台民间人权阵线](/articles/voa/1042189.md)
-
-3-19 [疫情减退，旅行松动，台湾呼吁北京取消两岸交流的政治障碍](/articles/voa/1042190.md)
-
-3-19 [粮食不够了？中国要求在动物饲料中减少玉米、豆粕用量](/articles/voa/1042191.md)
-
-3-19 [“美国高校，你想以与中共合作留名历史吗？” 美中科研合作是共赢还是养患](/articles/voa/1042192.md)
 
