--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+3-30 [CDC研究:辉瑞与莫德纳疫苗在“真实世界”情况下高度有效](/articles/voa/1041889.md)
+
 3-30 [香港多项民调指逾30%受访者计划移民 65%市民对政治前景没信心](/articles/voa/1041890.md)
 
 3-30 [一组联合国人权专家对中国政府据称对维吾尔人任意拘押并强迫劳动“深感关注”](/articles/voa/1041891.md)
@@ -598,6 +600,4 @@
 3-19 [时事大家谈: 美日韩欲联手抗中，北京平壤抱团取暖？](/articles/voa/1042187.md)
 
 3-19 [应对中俄 乌克兰日本加强防务合作](/articles/voa/1042188.md)
-
-3-19 [香港多个民主派政党退出联合平台民间人权阵线](/articles/voa/1042189.md)
 
