--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,6 +1,8 @@
 中国数字时代
 ------
 
+3-30 [【404文库】Rita是美少女 | 2021年3月21日 清华大学把我送进了拘留所](/articles/cdt/384386.md)
+
 3-30 [【网络民议】中国外交部成了国际流氓养成训练营](/articles/cdt/384402.md)
 
 3-29 [导筒directube｜香港电影的黑色星期一](/articles/cdt/384403.md)
@@ -598,6 +600,4 @@
 2-15 [秦川雁塔 | 秦晖：从“神剧”到“浑剧”](/articles/cdt/385918.md)
 
 2-14 [维舟 |  在流动中管理](/articles/cdt/385919.md)
-
-2-14 [大鱼论事  |  沸腾的物价和楼市：闲人闪开，别崩身上血](/articles/cdt/385920.md)
 
