--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+3-30 [美国国际宗教自由委员会谴责中国报复性制裁它的两名官员](/articles/voa/1041885.md)
+
+3-30 [中共党史专家司马璐102岁纽约逝世](/articles/voa/1041886.md)
+
+3-30 [拜登宣布4月19日前九成美国成年人将有资格接种疫苗](/articles/voa/1041887.md)
+
 3-30 [搁浅巨轮脱困 苏伊士运河恢复通航](/articles/voa/1041888.md)
 
 3-30 [CDC研究:辉瑞与莫德纳疫苗在“真实世界”情况下高度有效](/articles/voa/1041889.md)
@@ -594,10 +600,4 @@
 3-19 [拜登总统下令美国降半旗 悼念亚特兰大枪击惨案死难者](/articles/voa/1042183.md)
 
 3-19 [美法官命令提前释放澳门地产开发商吴立胜](/articles/voa/1042184.md)
-
-3-19 [该不该与北大合作？康奈尔校方和教授们陷入分歧](/articles/voa/1042185.md)
-
-3-19 [欧洲药管局判定阿斯利康新冠疫苗安全有效](/articles/voa/1042186.md)
-
-3-19 [时事大家谈: 美日韩欲联手抗中，北京平壤抱团取暖？](/articles/voa/1042187.md)
 
