--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+3-30 [「长赐号」顺利脱困 苏伊士运河恢复通行](/articles/dw/1043253.md)
+
+3-30 [中国欢迎联合国访问新疆　真的吗？](/articles/dw/1043254.md)
+
 3-29 [中国政府主导民众抵制外国商品？ 北京发声反驳](/articles/dw/1043255.md)
 
 3-29 [俄罗斯：一边支持缅甸军方，一边忧虑平民死亡](/articles/dw/1043256.md)
@@ -596,8 +600,4 @@
 3-7 [评论：金熊奖获奖电影“不只是黄片”](/articles/dw/1043551.md)
 
 3-6 [世卫反对疫苗护照 专家预计疫情明年初结束](/articles/dw/1043552.md)
-
-3-6 [停播争议后 CGTN重回德国电视网](/articles/dw/1043553.md)
-
-3-6 [事实核查：德国丢弃新冠疫苗？](/articles/dw/1043554.md)
 
