--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+3-30 [专制联盟vs.民主联盟？中国欲领导新国际秩序](/articles/nyt/1047028.md)
+
 3-30 [简报：中国意欲领导反美联盟；中国官场女性境遇引发关注](/articles/nyt/1047029.md)
 
 3-29 [辅警许艳案：性、腐败与中国官场中的女性境遇](/articles/nyt/1047030.md)
@@ -598,6 +600,4 @@
 1-11 [Twitter永久封禁特朗普账号违反第一修正案吗？](/articles/nyt/1047326.md)
 
 1-11 [如何在12天内弹劾美国总统？](/articles/nyt/1047327.md)
-
-1-11 [严寒下的美景：亚洲多地出现创纪录低温](/articles/nyt/1047328.md)
 
