--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,9 +1,11 @@
 中国数字时代
 ------
 
+3-30 [【旧闻重温】 在人间living | 5年了，那个被“爱国”同胞砸穿脑袋的中国人](/articles/cdt/384381.md)
+
 3-30 [【404文库】Rita是美少女 | 2021年3月21日 清华大学把我送进了拘留所](/articles/cdt/384386.md)
 
-3-30 [【网络民议】中国外交部成了国际流氓养成训练营](/articles/cdt/384402.md)
+3-30 [【网络民议】”中国外交部成了国际流氓养成训练营“](/articles/cdt/384402.md)
 
 3-29 [导筒directube｜香港电影的黑色星期一](/articles/cdt/384403.md)
 
@@ -598,6 +600,4 @@
 2-15 [【CDT周报】第四期：我既然以自由为人生的标配，那么理应为自由付出代价](/articles/cdt/385917.md)
 
 2-15 [秦川雁塔 | 秦晖：从“神剧”到“浑剧”](/articles/cdt/385918.md)
-
-2-14 [维舟 |  在流动中管理](/articles/cdt/385919.md)
 
