--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,8 @@
 法广
 ------
 
+3-30 [NBA定7月29日选秀 6月22日乐透抽签 – 法国国际广播电台 - RFI](/articles/rfi/1032535.md)
+
 3-30 [23国领袖吁缔结国际条约 整备因应未来疫情 – 法国国际广播电台 - RFI](/articles/rfi/1032536.md)
 
 3-30 [拜登没有见金正恩的打算](/articles/rfi/1032537.md)
@@ -598,6 +600,4 @@
 3-25 [瑞萨工厂火灾碰上全球晶片短缺     冲击恐持久](/articles/rfi/1032833.md)
 
 3-25 [美媒：中国因内容审查不严惩罚领英](/articles/rfi/1032834.md)
-
-3-25 [法国： 曾与中共签署“两党合作框架协议”的贝特朗宣布2022年参选总统](/articles/rfi/1032835.md)
 
