--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+3-30 [血腥周末过后 缅甸周一抗议又有14名示威者丧生](/articles/voa/1041882.md)
+
 3-30 [史密森尼学会第一位非洲裔历史学家会长展望未来](/articles/voa/1041883.md)
 
 3-30 [报告：北京用“新疆模式”压制信奉伊斯兰的回族人](/articles/voa/1041884.md)
@@ -598,6 +600,4 @@
 3-19 [参议院确认伯恩斯担任中情局长](/articles/voa/1042180.md)
 
 3-19 [白宫要义: 白宫: 是否与习再对话待阿拉斯加会后决定，反驳对中强硬导致歧视亚裔说法](/articles/voa/1042181.md)
-
-3-19 [塔夫茨大学宣布将关闭孔子学院](/articles/voa/1042182.md)
 
