--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,6 +1,8 @@
 中国数字时代
 ------
 
+3-30 [恰帕斯东风Radio | 左翼视角下的棉花叙事及其不足](/articles/cdt/384380.md)
+
 3-30 [【旧闻重温】 在人间living | 5年了，那个被“爱国”同胞砸穿脑袋的中国人](/articles/cdt/384381.md)
 
 3-30 [【404文库】Rita是美少女 | 2021年3月21日 清华大学把我送进了拘留所](/articles/cdt/384386.md)
@@ -598,6 +600,4 @@
 2-15 [BBC | 世卫调查人员指中国不提供早期患者原始数据 白宫表示关注](/articles/cdt/385916.md)
 
 2-15 [【CDT周报】第四期：我既然以自由为人生的标配，那么理应为自由付出代价](/articles/cdt/385917.md)
-
-2-15 [秦川雁塔 | 秦晖：从“神剧”到“浑剧”](/articles/cdt/385918.md)
 
