--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,14 @@
 法广
 ------
 
+3-30 [港府拟收紧公司查册 记协批窒碍信息自由 小股东保障减](/articles/rfi/1032528.md)
+
+3-30 [亲中机构书籍诬蔑香港「评协」受美国资助 法庭裁诽谤罪成罚25万元](/articles/rfi/1032529.md)
+
+3-30 [遭佛奇、柏克斯批防疫失当 川普发声明回呛 – 法国国际广播电台 - RFI](/articles/rfi/1032530.md)
+
+3-30 [哈登大三元追平队史纪录 篮网近21战豪取18胜 – 法国国际广播电台 - RFI](/articles/rfi/1032531.md)
+
 3-30 [中国人大常委通过修订香港基本法附件 – 法国国际广播电台 - RFI](/articles/rfi/1032532.md)
 
 3-30 [富国对咖啡等商品需求增 热带森林砍伐速度加快 – 法国国际广播电台 - RFI](/articles/rfi/1032533.md)
@@ -592,12 +600,4 @@
 3-25 [港澳叫停接种德国BioNTech疫苗](/articles/rfi/1032826.md)
 
 3-25 [拜登的中西对抗：一场不对称的战争 - 要闻分析](/articles/rfi/1032827.md)
-
-3-25 [华春莹不再比GDP只看谁人多：中国网民吐槽](/articles/rfi/1032828.md)
-
-3-25 [纳瓦尼被囚 加拿大制裁9名俄罗斯官员 – 法国国际广播电台 - RFI](/articles/rfi/1032829.md)
-
-3-25 [法国Covid-19重症监护室的专访](/articles/rfi/1032830.md)
-
-3-25 [芬兰、冰岛将恢复年长者可接种AZ疫苗 – 法国国际广播电台 - RFI](/articles/rfi/1032831.md)
 
