--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+3-30 [美国如何赢得与中国的冷战？](/articles/nyt/1047026.md)
+
 3-30 [WHO新冠溯源报告未解答关键问题](/articles/nyt/1047027.md)
 
 3-30 [专制联盟vs.民主联盟？中国欲领导新国际秩序](/articles/nyt/1047028.md)
@@ -598,6 +600,4 @@
 1-11 [武汉封城临近周年，中共力推抗疫胜利叙事](/articles/nyt/1047324.md)
 
 1-11 [被Twitter封杀后，特朗普要去哪里寻求关注？](/articles/nyt/1047325.md)
-
-1-11 [Twitter永久封禁特朗普账号违反第一修正案吗？](/articles/nyt/1047326.md)
 
