--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+3-30 [新疆棉事件升级 多家H&M中国实体店被关](/articles/dw/1043248.md)
+
 3-30 [巴西“特朗普”大幅改组内阁为哪般？](/articles/dw/1043249.md)
 
 3-30 [他露出身上的伤疤：这样够爱国了吗？](/articles/dw/1043250.md)
@@ -598,6 +600,4 @@
 3-7 [印度愿向特斯拉提供全球最优惠生产条件](/articles/dw/1043546.md)
 
 3-7 [音频聊天App火爆　字节跳动也在开发](/articles/dw/1043547.md)
-
-3-7 [未来汽车——轮子上的计算中心](/articles/dw/1043548.md)
 
