--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,6 +1,8 @@
 中国数字时代
 ------
 
+3-30 [【CDTV】徐晓冬｜公民记者陈秋实最新动态：念念不忘必有回响](/articles/cdt/384364.md)
+
 3-30 [维舟｜对权力的共情](/articles/cdt/384366.md)
 
 3-30 [美国之音｜总书记亲民秀再遇喊冤女 寄希望于“青天大老爷”的冤民](/articles/cdt/384375.md)
@@ -598,6 +600,4 @@
 2-15 [【图说天朝】大年三十女儿不能回家住，这破风俗还存在？](/articles/cdt/385910.md)
 
 2-15 [高耀洁 | 93岁的我，一生都在逃难](/articles/cdt/385912.md)
-
-2-15 [【旧闻重温】Matters | 新疆有所思想教育改造中心](/articles/cdt/385915.md)
 
