--- a/lists/金融时报.md
+++ b/lists/金融时报.md
@@ -1,6 +1,8 @@
 金融时报
 ------
 
+3-30 [沃尔沃将为全公司新生儿父母均提供完整产假](/articles/ft/1045823.md)
+
 3-30 [拜登政府为美国海上风电开发设定目标](/articles/ft/1045824.md)
 
 3-30 [从低迷的郑州楼市看中国地域鸿沟](/articles/ft/1045825.md)
@@ -598,6 +600,4 @@
 2-4 [如何像预测天气一样预测疾病？](/articles/ft/1046121.md)
 
 2-4 [FT社评：监禁纳瓦尔尼突显克里姆林宫不安](/articles/ft/1046122.md)
-
-2-4 [货币数字化应摒弃铸币思维](/articles/ft/1046123.md)
 
