--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+3-30 [美驻帕劳大使访台湾 强调三方关系只会更密切](/articles/voa/1041879.md)
+
 3-30 [台湾跨党派立委共同推动台版人权问责法立法](/articles/voa/1041880.md)
 
 3-30 [全国人大修订香港基本法 “爱国者治港”方针缩减地区直选至20席](/articles/voa/1041881.md)
@@ -598,6 +600,4 @@
 3-19 [中国欲抢占世界科技创新高地，但在现行制度里只能是“中国梦”](/articles/voa/1042177.md)
 
 3-19 [《柳叶刀》最新研究报告：武汉市去年4月约6.9%人有新冠抗体](/articles/voa/1042178.md)
-
-3-19 [美韩2加2会谈共同关切朝鲜核威胁](/articles/voa/1042179.md)
 
